--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "oembed-parser": "^3.1.6-rc1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-select": "^5.7.5",
     "react-use": "^17.4.0",
-    "react-youtube": "^10.1.0",
     "sass": "^1.68.0",
-    "typescript": "5.2.2",
-    "uuid": "^9.0.1"
+    "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "file-loader": "^6.2.0"
   }
 }
